# Briefly

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  README_MAIN.md  SERVER_README.md  TLDR_STRUCTURE.md  api_sources_config.yaml  comprehensive_rss_collection_20250826_071421.json  docker-compose.yml  env.template  init.sql  main.py  pyproject.toml  server.py
PoC/: FINDINGS.md
PoC/beautifulsoup_poc/: README.md  daily_summary_20250818_202125.json  daily_summary_20250818_202221.json  daily_summary_20250819_045547.json  daily_summary_20250819_045713.json  example_sources.yaml  news_crawler.py  requirements.txt  (+1 more)
crons/: CRON_SETUP.md  DEPLOYMENT_CHECKLIST.md  cron_daily_news.py  deploy_oracle_cloud.sh  requirements.txt  run_daily_news.sh  setup_cron.sh
scripts/: debug_article_content.py  debug_newsapi.py  debug_newsapi_collector.py  demo_tldr_structure.py  extract_news_data.py  test_aggregation_service.py  test_all_services.py  test_api_collector.py  test_arxiv_only.py  test_categorized_news.py  test_complete_flow.py  test_db_connection.py  test_eventregistry.py  test_full_tldr_structure.py  test_llm_categories.py  test_newsapi_client.py  test_newsapi_collector.py  test_prioritized_collection.py  test_publisher_dry_run.py  test_publisher_real.py  test_publisher_simple.py  test_reranker.py  test_rss_collector.py  test_rss_collector_comprehensive.py  test_simple_rss_collector.py  test_slack_publisher.py  test_slack_simple.py  test_source_distribution.py  test_split_collectors.py  test_summarizer_quality.py  test_tldr_summarizer.py  test_updated_newsapi_collector.py
slackbot/: __init__.py  config.py
(+73 files in other folders)
